--- a/adconfig.json
+++ b/adconfig.json
@@ -1,5 +1,5 @@
 {
-  "show_ad": false,
-  "max_ads_per_day": 3,
+  "show_ad": true,
+  "max_ads_per_day": 2,
   "ad_unit_id": "ca-app-pub-3940256099942544/1033173712"
 }
